app/less/classes/lyrics.less
.lyrics-block {
    @lyric-verse-size: 1em;
    font-size: @lyric-verse-size;
    line-height: 150%;

    a {
        font-weight: normal;
    }

    .stanza {
        &:not(:last-child) {
            margin-bottom: @lyric-verse-size;
        }

        .verse {
            // TODO: Figure out better way to distinguish odd and even verses.
            &:nth-child(odd) {
                background-color: #eed;
            }
            &:nth-child(even) {
                // background-color: #ffe;
            }
        }
    }

    /**
     * Applies to both plain text and text within anchors, so that they are
     * in front of dots.
     */
    .text-block {
        position: relative;
        z-index: @text-z-index;
    }
}

.double-lines-block {
    display: flex;
    justify-content: center;

    // FIXME: Why is column width not expanding for text?
    .line {
        @hanging-indent-width: 1.5em;
        @centre-width: 50%;
        @centre-edge-margin: (@centre-width - 100%) / 2;
        width: 100%;

        &.left {
            text-indent:-@hanging-indent-width;
            padding-left: @hanging-indent-width;

            &.centre {
                margin-left: @centre-edge-margin;
            }
        }

        &.centre {
            width: @centre-width;

            &.exact {
                text-indent: 0;
                padding-left: 0;
                text-align: center;
            }
        }

        &.right {
            text-align: right;

            // FIXME: Dot block and underline bar are misaligned in right column on Firefox when anchor begins new line. It's because of the direction: rtl. Happens in left column too, for different reason. See Odin "dream your whims instead."

            /**
             * Styling for hanging indent with right-aligned text. The hidden
             * last letter is a stupid hack to prevent rtl from switching the
             * order of the last letter.
             */
            text-indent:-@hanging-indent-width;
            padding-right: @hanging-indent-width;
            direction: rtl;
            &:after {
                content: 'a';
                opacity: 0;
                font-size: 0;
                line-height: 0;
            }

            &.far {
                // Single gutter between far left and right columns.
                margin-left: @field-padding;
            }

            &.centre {
                margin-right: @centre-edge-margin;
            }
        }
    }
}

.anchor-block {
    @anchor-block-height: 0.9em;
    position: relative;
    height: @anchor-block-height;

    .dots-block {
        // Override global dot diameter.
        .dot-diameter-mixin(@anchor-block-height);

        position: absolute;
        left: -@anchor-block-height * 0.2;
        top: -@anchor-block-height * 0.2;
    }
}

.anchor-link {
    position: relative;
    z-index: 0;
    white-space: nowrap;

    @colour: @right-field-colour;
    @offset: 0.75px;
    @blur: 0;
    text-shadow:
        -@offset -@offset @blur @colour,
        @offset -@offset @blur @colour,
        -@offset @offset @blur @colour,
        @offset @offset @blur @colour;

    // Underline anchor tag.
    &:after {
        content: '';
        position: absolute;
        z-index: -1;
        width: 100%;
        height: 35%;
        bottom: 0;
        left: 0;
        background-color: mix(@lyric-link-colour, white, 25%);
    }
}

// For dev purposes.
.todo {
    a {
        color: #c00;

        &:hover {
            color: #d33;
        }

        &:active {
            color: #f66;
        }
    }

    // Make underline red.
    .anchor-link {
        &:before {
            background-color: mix(red, white, 50%);
        }
    }
}

